k8sFile/istio-demo-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  creationTimestamp: "2022-11-25T16:04:14Z"
  generation: 7
  labels:
    istio-demo: gateway
  managedFields:
  - apiVersion: networking.istio.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:istio-demo: {}
      f:spec:
        .: {}
        f:selector:
          .: {}
          f:istio: {}
        f:servers: {}
    manager: rancher
    operation: Update
    time: "2022-11-25T17:29:02Z"
  name: istio-demo-gateway
  namespace: istio-demo
  resourceVersion: "87317"
  uid: fe103ad8-9094-4a3a-a85c-21172d63c8b3
spec:
  selector:
    istio: ingressgateway
  servers:
  - bind: 0.0.0.0
    hosts:
    - id.likyam.cn
    port:
      name: 80-http
      number: 80
      protocol: HTTP
